--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
 	<meta name="Resource-type" content="Document" />
 
 
-	<link rel="stylesheet" type="text/css" href="../dist/fullpage.css" />
+	<link rel="stylesheet" type="text/css" href="js/fullpage.css" />
 	<!-- <link rel="stylesheet" type="text/css" href="examples.css" /> -->
 	<style>
 
@@ -121,7 +121,7 @@
 		<div class="section" id="section3"></div>
 	</div>
 
-<script type="text/javascript" src="../dist/fullpage.js"></script>
+<script type="text/javascript" src="js/fullpage.js"></script>
 <!-- <script type="text/javascript" src="examples.js"></script> -->
 
 <script type="text/javascript">
@@ -133,6 +133,6 @@
         css3:false
 		});
 		</script>
-<script type="text/javascript" src="../dist/digitalSignage.js"></script>		
+<script type="text/javascript" src="js/digitalSignage.js"></script>		
 </body>
 </html>
