--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Carteleria digital</title>
+    <meta name="author" content="Alvaro Trigo Lopez" />
+    <meta
+      name="description"
+      content="fullPage fixed full-screen backgrounds."
+    />
+    <meta
+      name="keywords"
+      content="fullpage,jquery,demo,screen,fixed,fullscreen,backgrounds,full-screen"
+    />
+    <meta name="Resource-type" content="Document" />
 
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Carteleria digital</title>
-	<meta name="author" content="Alvaro Trigo Lopez" />
-	<meta name="description" content="fullPage fixed full-screen backgrounds." />
-	<meta name="keywords"  content="fullpage,jquery,demo,screen,fixed,fullscreen,backgrounds,full-screen" />
-	<meta name="Resource-type" content="Document" />
-
-
-	<link rel="stylesheet" type="text/css" href="js/fullpage.css" />
-	<!-- <link rel="stylesheet" type="text/css" href="examples.css" /> -->
-	<style>
-
-	/* Style for our header texts
+    <link rel="stylesheet" type="text/css" href="js/fullpage.css" />
+		<!-- <link rel="stylesheet" type="text/css" href="examples.css" /> -->
+		
+    <style>
+      /* Style for our header texts
 	* --------------------------------------- */
-	h1{
-		font-size: 5em;
-		font-family: arial,helvetica;
-		color: #fff;
-		margin:0;
-		padding:0;
-	}
+      h1 {
+        font-size: 5em;
+        font-family: arial, helvetica;
+        color: #fff;
+        margin: 0;
+        padding: 0;
+      }
 
-	/* Centered texts in each section and Backgrounds will cover all the section
+      /* Centered texts in each section and Backgrounds will cover all the section
 	* --------------------------------------- */
-	.section{
-		text-align:center;
-		background-size: cover;
-		background-attachment: fixed;
-		padding: 6% 0 0 0;
-	}
+      .section {
+        text-align: center;
+        background-size: cover;
+        background-attachment: fixed;
+        padding: 6% 0 0 0;
+      }
 
-
-
-	/* Defining each sectino background and styles
+      /* Defining each sectino background and styles
 	* --------------------------------------- */
-	#section0{
+      /* #section0{
 		background-image: url(imgs/bg1.jpg);
 	}
 	#section1{
@@ -48,27 +50,25 @@
 	}
 	#section3{
 		background-image: url(imgs/bg4.jpg);
-	}
+	} */
 
-
-	/* Bottom menu
+      /* Bottom menu
 	* --------------------------------------- */
-	#infoMenu li a {
-		color: #fff;
-	}
-	</style>
+      #infoMenu li a {
+        color: #fff;
+      }
+    </style>
 
-	<!--[if IE]>
-		<script type="text/javascript">
-			 var console = { log: function() {} };
-		</script>
-	<![endif]-->
-</head>
-<body>
+    <!--[if IE]>
+      <script type="text/javascript">
+        var console = { log: function() {} };
+      </script>
+    <![endif]-->
+  </head>
+  <body>
+    <!-- <a href="https://github.com/alvarotrigo/fullPage.js" id="githubLink"><img style="position: fixed;z-index:99; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a> -->
 
-<!-- <a href="https://github.com/alvarotrigo/fullPage.js" id="githubLink"><img style="position: fixed;z-index:99; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a> -->
-
-<!-- <select id="demosMenu">
+    <!-- <select id="demosMenu">
   <option selected>Choose Demo</option>
   <option id="jquery-adapter">jQuery adapter</option>
   <option id="active-slide">Active section and slide</option>
@@ -114,25 +114,25 @@
   <option id="vue-fullpage">Vue-fullpage component</option>
 </select> -->
 
-<div id="fullpage">
-		<div class="section" id="section1"></div>
-		<div class="section" id="section0"></div>
-		<div class="section" id="section2"></div>
-		<div class="section" id="section3"></div>
-	</div>
+    <div id="fullpage">
+      <div class="section" id="default-element"></div>
+		</div>
+		
+    <script type="text/javascript" src="js/getImages.js"></script>
 
-<script type="text/javascript" src="js/fullpage.js"></script>
-<!-- <script type="text/javascript" src="examples.js"></script> -->
+		<script type="text/javascript" src="js/fullpage.js"></script>
+    <!-- <script type="text/javascript" src="examples.js"></script> -->
 
-<script type="text/javascript">
-    var myFullpage = new fullpage('#fullpage', {
-				verticalCentered: false,
-				continuousVertical: true,
+    <script type="text/javascript">
+      var myFullpage = new fullpage("#fullpage", {
+        verticalCentered: false,
+        continuousVertical: true,
 
         //to avoid problems with css3 transforms and fixed elements in Chrome, as detailed here: https://github.com/alvarotrigo/fullPage.js/issues/208
-        css3:false
-		});
-		</script>
-<script type="text/javascript" src="js/digitalSignage.js"></script>		
-</body>
+        css3: false
+      });
+    </script>
+		<script type="text/javascript" src="js/digitalSignage.js"></script>
+	
+  </body>
 </html>
