--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -126,6 +126,7 @@
     <script type="text/javascript">
       var myFullpage = new fullpage("#fullpage", {
         verticalCentered: false,
+        scrollingSpeed: 150,
         continuousVertical: true,
 
         //to avoid problems with css3 transforms and fixed elements in Chrome, as detailed here: https://github.com/alvarotrigo/fullPage.js/issues/208
